Se creo la escritura de datos a traves de blazor

--- a/AgendAgilV2/Components/_Imports.razor
+++ b/AgendAgilV2/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using AgendAgilV2
 @using AgendAgilV2.Components
+@using AgendAgilV2.Domain.Entities
+@using AgendAgilV2.Domain.Enums
+@using AgendAgilV2.Application.Interfaces
